@startuml
hide empty members

namespace _structure {

class Net {
    name
    addType(typeName)
    addPlace(name, type, policy)
    addImmediateTransition(name, priority, weight)
    addTimedTransition(name, firingDistribution)
    addConstructor(name, transitionName, outputPlaceName)
    addDestructor(name, transitionName, inputPlaceName)
    addTransfer(name, transitionName, inputPlaceName, outputPlaceName)
    addTest(name, transitionName, placeName)
}

abstract class Place {
    name
    attachObserver(AbstractPlaceObserver o)
    attachObserver(PresenceObserver o)
    push(Token t)
    Token pop()
    Token peek()
}

note as placeNote
All arcs connected
to a place must have
the type of the place
end note
placeNote .. Place

class Transition{
    name
    priority
    weight
    deadline
    disabledArcCount
    attachObserver(AbstractTransitionObserver o)
    bool isEnabled()
    fire()
    incrementDisabledArcCount()
    decrementDisabledArcCount()
}
note right
isEnabled() == True iff
disabledArcCount == 0
end note

interface Condition{
    isTrue()
}

class UpdateOp {
    key
    newValue
    apply(Token t)
}

abstract class Arc {
    name
    isEnabled()
    flow()
}

class Token {
    -attachObserver(AbstractTokenObserver o)
    -removeObserver(AbstractTokenObserver o)
    moveTo(Place p)
    removeFrom(Place p)
    delete()
}
class Tag{
    key
    value
}

interface TokenPlacer

interface PresenceObserver {
    reportNoToken()
    reportSomeToken()
}

Net *-- "*" TokenType: types
Net *--> "*" Place: places
Net *--> "*" Transition: transitions
Net *--> "*" plugins.interface.AbstractPlugin: observers
TokenType <-- "*" Arc
TokenType <-- "*" Place
Place -l- "*" Token
Token *-- "*" plugins.interface.AbstractTokenObserver
Token *-- "*" Tag : tags
Place *-- "*" plugins.interface.AbstractPlaceObserver
TokenPlacer .u.|> Arc
PresenceObserver .u.|> Arc
Transition *-- "*" Arc
Transition *-- "*" plugins.interface.AbstractTransitionObserver
PresenceObserver "*" -- Place : input
TestArc .d.|> PresenceObserver
ConstructorArc .d.|> TokenPlacer
DestructorArc .d.|> PresenceObserver
TokenPlacer "*" --> Place : output
Transfer  .d.|> TokenPlacer
Transfer  .d.|> PresenceObserver
FIFO .u.|> Place
LIFO .u.|> Place
TokenPlacer *--> "*" Updater : updates
Updater *--> Condition
Updater *--> UpdateOp


}

namespace plugins.autofire {
class AutoFirePlugin{
    currentTime
}

class TransitionObserver

class TokenObserver {
    creationTime
    arrivalTime
}
plugins.autofire.AutoFirePlugin *-- "*" TransitionObserver
plugins.autofire.AutoFirePlugin *-- "*" TokenObserver
plugins.autofire.AutoFirePlugin *-- "*" PlaceObserver
plugins.autofire.AutoFirePlugin ..|> plugins.interface.AbstractPlugin
TransitionObserver ..|> plugins.interface.AbstractTransitionObserver
TokenObserver ..|> plugins.interface.AbstractTokenObserver
PlaceObserver ..|> plugins.interface.AbstractPlaceObserver
}

namespace plugins.interface {
interface AbstractPlugin {
    name
    AbstractPlaceObserver observe(_structure.Place p)
    AbstractTokenObserver observe(_structure.Token t)
    AbstractTransitionObserver observe(_structure.Transition t)
}
interface AbstractPlaceObserver{
    reportArrivalOf(token)
    reportDepartureOf(token)
}
interface AbstractTokenObserver{
    reportConstruction()
    reportDestruction()
    reportArrivalAt(_structure.Place p)
    reportDepartureFrom(_structure.Place p)
}
interface AbstractTransitionObserver{
    beforeFiring()
    afterFiring()
    gotEnabled()
    gotDisabled()
}

}
@enduml